Modified .gitignore to ignore PSDs from 2D hand painted tilesets.

--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,8 @@
 # 2D Hand Painted Tilesets
 # /[Aa]ssets/2D*Hand*Painted*Tilesets
 # /[Aa]ssets/2D*Hand*Painted*Tilesets.meta
-# /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Source*Files
-# /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Source*Files.meta
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Source*Files
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Source*Files.meta
 # /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Scenes
 # /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Scenes.meta
 
