--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,14 @@
 # /[Aa]ssets/2D*Hand*Painted*Tilesets.meta
  /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Source*Files
  /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Source*Files.meta
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Extra*Objects/Source*Files
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Extra*Objects/Source*Files.meta
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Mine*Tileset/Source*Files
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Mine*Tileset/Source*Files.meta
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Snowland*Tileset/Source*Files
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Snowland*Tileset/Source*Files.meta
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Town*Tileset/Source*Files
+ /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Town*Tileset/Source*Files.meta
 # /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Scenes
 # /[Aa]ssets/2D*Hand*Painted*Tilesets/2D*Hand*Painted*-*Dungeon*Tileset/Scenes.meta
 
